<?xml version="1.0" encoding="utf-8"?>  
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"  
	android:layout_width="fill_parent"  
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    	
>

<HorizontalScrollView
	android:layout_width="fill_parent"  
    android:layout_height="fill_parent"	
    android:scrollbars="vertical|horizontal"
   	>
<LinearLayout
    android:layout_width="wrap_content"  
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    >  
 	<TableLayout 
 		android:id="@+id/list_table"
 		android:layout_width="wrap_content"  
    	android:layout_height="wrap_content"
			>
			<TableRow
				android:background="#20A5A5A5" 
			> 
			
			<TextView
				android:text="@string/area"
			   android:textColor="@color/black"
			   android:width="150dp"
			   android:layout_margin="1dp"
			   android:background="#60aeebee"
			   android:gravity="center"
			   >
			   </TextView>
			
			<TextView
				
				android:text="@string/up_person"
				android:background="#60aeebee"
				android:gravity="center"
				android:textColor="@color/black"
				android:width="150dp"
				android:layout_margin="1dp"
			></TextView>
			<TextView
				
				android:text="@string/up_person_mobile"
				android:background="#60aeebee"
				android:textColor="@color/black"
				android:width="150dp"
				 android:layout_margin="1dp"
				  android:gravity="center"
			></TextView>
			<TextView
				
				android:text="@string/send_date"
				android:background="#60aeebee"
				android:textColor="@color/black"
				android:width="150dp"
				 android:layout_margin="1dp"
				  android:gravity="center"
			></TextView>
			<TextView
				
				android:text="@string/msg_context"
				android:background="#60aeebee"
				android:textColor="@color/black"
				android:width="150dp"
				 android:layout_margin="1dp"
				  android:gravity="center"
			></TextView>
			<TextView
				android:text="@string/up_state"
				android:background="#60aeebee"
				android:textColor="@color/black"
				android:width="150dp"
				android:layout_margin="1dp"
				android:gravity="center"
			></TextView>
			</TableRow>
	
</TableLayout>
	<ListView
		android:id="@+id/upDataList"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBottom="@id/list_table"
		android:cacheColorHint="#00000000"
		android:fastScrollEnabled="true"
		android:focusable="true"
		android:scrollbars="vertical"
	></ListView> 

</LinearLayout>
</HorizontalScrollView>
<!--<SlidingDrawer-->
<!--	android:id="@+id/sliding_tree"-->
<!--	android:layout_height="fill_parent"-->
<!--	android:layout_width="fill_parent"-->
<!--	android:handle="@+id/slidingBtn"-->
<!--	android:content="@+id/positionTree"-->
<!--	android:orientation="horizontal"-->
<!--	android:keepScreenOn="false"-->
<!--	android:topOffset="80dp"-->
<!-->-->
<!--	<Button-->
<!--		android:id="@id/slidingBtn"-->
<!--		android:text="查看"-->
<!--		android:layout_width="wrap_content"-->
<!--		android:layout_height="wrap_content"-->
<!--	/>-->
<!--	<ListView-->
<!--		android:background="@color/xinxi"-->
<!--		android:id="@id/positionTree"-->
<!--		android:layout_width="wrap_content"-->
<!--		android:layout_height="wrap_content"-->
<!--/>-->
<!--</SlidingDrawer>-->
<!--<SlidingDrawer-->
<!--	android:id="@+id/sliding_tree"-->
<!--	android:layout_height="fill_parent"-->
<!--	android:layout_width="fill_parent"-->
<!--	android:handle="@+id/seachBtn"-->
<!--	android:content="@+id/condition"-->
<!--	android:bottomOffset="-80dp"-->
<!--	android:orientation="horizontal"-->
<!--	android:keepScreenOn="false"-->
<!-->-->
<!--	<Button-->
<!--		android:id="@id/seachBtn"-->
<!--		android:text="查询"-->
<!--		android:layout_width="wrap_content"-->
<!--		android:layout_height="wrap_content"-->
<!--	/>-->
<!--	<TextView-->
<!--		android:text="查询"-->
<!--		android:layout_width="wrap_content"-->
<!--		android:layout_height="wrap_content"-->
<!--	></TextView>-->
<!--	<EditText-->
<!--		android:id="@id/condition"-->
<!--		android:layout_width="wrap_content"-->
<!--		android:layout_height="wrap_content"-->
<!--/>-->
<!--</SlidingDrawer>-->
</RelativeLayout>